--- a/public/views/index.html
+++ b/public/views/index.html
@@ -54,13 +54,16 @@ $(document).ready(function() {
     <div class="background-opacity"></div>
     <div class="container">
       <div class="row" id="main-text">
+        <!--
         <div class="col-md-12" id="avatars" ng-controller="IndexController">
           <img ng-repeat="avatar in avatars" ng-src="{{avatar}}" id="avatar-face">
         </div>
-        <!-- Teaser Slogan Start -->
+        -->
+        <!-- Teaser Slogan Start 
         <div class="wpb-slogan">
           <h2>A Game for Horrible People <span id="third-word">Desperately</span> Trying to do Good</h2>
         </div>
+        -->
         <!-- Teaser Slogan End -->
 
       <!-- Teaser Text Start -->
